Fixed alignment and changed the default height from div

--- a/public/stylesheets/chat.css
+++ b/public/stylesheets/chat.css
@@ -1,24 +1,27 @@
 .panel .slidedown .glyphicon, .chat .glyphicon{
-    margin-right: 5px;
+  margin-right: 5px;
+}
+
+#messages {
+  height: 400px;
 }
 
 .panel-body{
-    overflow-y: scroll;
-    height: 400px;
+  overflow-y: scroll;
 }
 
 ::-webkit-scrollbar-track{
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-    background-color: #F5F5F5;
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+  background-color: #F5F5F5;
 }
 
 ::-webkit-scrollbar{
-    width: 12px;
-    background-color: #F5F5F5;
+  width: 12px;
+  background-color: #F5F5F5;
 }
 
 ::-webkit-scrollbar-thumb{
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
-    background-color: #555;
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+  background-color: #555;
 }
 
